<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ApecsApp</string>
    <string name="learner_s_name">Learner\'s Name</string>
    <string name="learner_s_age">Learner\'s Age</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_diagnosis">Enter Diagnosis</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="Continue">Continue</string>
    <string name="welcome_to_a_pecs" />
    <string name="log_in" />
    <string name="login">Login</string>
    <string name="welcome_to_apecs">Welcome to APECS</string>
    <string name="start_training">Start Training!</string>
    <string name="instructions">Instructions</string>
    <string name="already_trained_for_pecs_start_using">Already trained for PECS? Start Using!</string>
    <string name="Apecs">Apecs</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="upload_from_device">Upload from device</string>
    <string name="todo">TODO</string>
    <string name="load_picture">Load Picture</string>
    <string name="phase1instructions">• This phase will teach your child that whenever he needs an object, he needs to drag an item of that object to the communication strip.\n• Take an object of child\'s interest and find a photo of it from the library.\n• In case the image is not available in the library, an image can be uploaded from your mobile gallery.\n• Place the device and object in front of the child and try asking What do you want?\n• Whenever he/she tries to reach the object, grab their hand to the device guiding them to drag the picture to the communication strip.\n• After the drag, give the object to the child.\n• Repeat this a few times until you child learns the technique and drags the picture without any help.\n</string>
    <string name="phase2instructions">• This phase will teach your child that whenever he needs an object, he needs to drag an item of that object to the communication strip.\n• Take an object of child\'s interest and find a photo of it from the library.\n• In case the image is not available in the library, an image can be uploaded from your mobile gallery.\n• Place the device and object in front of the child and try asking What do you want?\n• Whenever he/she tries to reach the object, grab their hand to the device guiding them to drag the picture to the communication strip.\n• After the drag, give the object to the child.\n• Repeat this a few times until you child learns the technique and drags the picture without any help.\n</string>
    <string name="phase3instructions">• This phase will teach your child that whenever he needs an object, he needs to drag an item of that object to the communication strip.\n• Take an object of child\'s interest and find a photo of it from the library.\n• In case the image is not available in the library, an image can be uploaded from your mobile gallery.\n• Place the device and object in front of the child and try asking What do you want?\n• Whenever he/she tries to reach the object, grab their hand to the device guiding them to drag the picture to the communication strip.\n• After the drag, give the object to the child.\n• Repeat this a few times until you child learns the technique and drags the picture without any help.\n</string>
    <string name="phase4instructions">• This phase will teach your child that whenever he needs an object, he needs to drag an item of that object to the communication strip.\n• Take an object of child\'s interest and find a photo of it from the library.\n• In case the image is not available in the library, an image can be uploaded from your mobile gallery.\n• Place the device and object in front of the child and try asking What do you want?\n• Whenever he/she tries to reach the object, grab their hand to the device guiding them to drag the picture to the communication strip.\n• After the drag, give the object to the child.\n• Repeat this a few times until you child learns the technique and drags the picture without any help.\n</string>
    <string name="phase5instructions">• This phase will teach your child that whenever he needs an object, he needs to drag an item of that object to the communication strip.\n• Take an object of child\'s interest and find a photo of it from the library.\n• In case the image is not available in the library, an image can be uploaded from your mobile gallery.\n• Place the device and object in front of the child and try asking What do you want?\n• Whenever he/she tries to reach the object, grab their hand to the device guiding them to drag the picture to the communication strip.\n• After the drag, give the object to the child.\n• Repeat this a few times until you child learns the technique and drags the picture without any help.\n</string>

</resources>