<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="278dp"
        android:layout_height="57dp"
        android:layout_marginTop="112dp"
        android:text="@string/welcome_to_apecs"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginTop="92dp"
        android:background="@color/purple_200"
        android:onClick="launchVerificationActivity"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColorHint="@color/teal_700"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Login" />

    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple_200"
        android:onClick="lauchRegistration"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColorHint="@color/teal_700"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>