<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:backgroundTint="#FFFFFF"
    android:backgroundTintMode="add"
    android:foregroundTint="@color/white"
    android:visibility="visible"
    tools:context=".StartOption">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="238dp"
        android:layout_height="141dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/welcome_to_apecs"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="50dp"
        android:onClick="launchPictureOptions"
        android:text="@string/start_training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:onClick="launchInstructions"
        android:text="@string/instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="?android:attr/colorBackground"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        android:outlineProvider="none"
        android:text="@string/already_trained_for_pecs_start_using"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="visible"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>